--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html {
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.85)), url(../assets/1920x1080-pictures-q3sujoyo7upr3bmr.jpg);
+     background-image: linear-gradient(rgba(0, 0, 0, 0.85)), url(/assets/1920x1080-pictures-q3sujoyo7upr3bmr.jpg);
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
