--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,6 @@ html {
 body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-     background-image: linear-gradient(rgba(0, 0, 0, 0.85)), url(/assets/1920x1080-pictures-q3sujoyo7upr3bmr.jpg);
-    background-size: cover;
-    background-position: bottom;
-    background-repeat: no-repeat;
 }
 
 header {
@@ -174,6 +170,13 @@ button:hover .icon {
   color: rgb(138, 18, 18);
 }
 
+.form-section {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.72)), url(../assets/1920x1080-pictures-q3sujoyo7upr3bmr.jpg);
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
+}
+
 .bg-books {
   background-color: rgb(43, 43, 43)
 }
@@ -208,6 +211,11 @@ font-size: 0.9rem;
 
     .container {
         max-width: 1200px;
+    }
+
+    .container-form {
+      max-width: 800px;
+      padding: 5rem 0 6rem !important;
     }
 
     section.form-container {
